[bumpversion]
current_version = 1.0.32
commit = True
tag = True
message = "[ci skip] Bumping version {current_version} to {new_version}"

[bumpversion:file:setup.py]

[metadata]
name = locust-grasshopper
author = Team Shield
author_email = dg_qualitysystemengineering@alteryx.com
url = https://git.alteryx.com/qualityengineering/frameworks/grasshopper
description = Grasshopper - a Locust with Pytest framework for load testing APIs
long_description = file: README.md
long_description_content_type = text/markdown
license = Alteryx Internal

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.9
install_requires = 
	gevent~=21.12.0
	influxdb~=5.3.1
	locust~=2.12.2
	locust-influxdb-listener~=0.0.9
	pytest~=6.2.5
	termcolor~=1.1.0
	pyyaml~=5.4
	tag-matcher~=0.0.5

[options.packages.find]
where = src
